# iot-backend-security-suite

./: .env.example  .gitattributes  .gitignore  MakeFile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4070b2c6e36e_create_users_and_devices_tables.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: device.py  user.py
app/routers/: auth.py  devices.py  password_reset.py
app/routers/vulnerable/: no_rate_limit.py  weak_auth.py
app/schemas/: auth.py  device.py
app/services/: auth_service.py  email_service.py  token_service.py
docker/: app.Dockerfile
framework/analyzers/: cookie_analyzer.py  jwt_analyzer.py  tls_checker.py
framework/reporting/: html_reporter.py  json_reporter.py
framework/runners/: brute_force.py  rate_limit_prober.py
reports/json/: section_2_1_run.txt  section_4_6_run.txt
tests/: conftest.py
tests/isvs/section_2_1/: test_authorization_enforcement.py  test_brute_force_protection.py  test_jwt_controls.py  test_password_policy.py
tests/isvs/section_4/: test_error_disclosure.py  test_input_validation.py  test_security_headers.py
tests/isvs/section_6/: test_certificate_validation.py  test_tls_enforcement.py
tests/unit/: test_cookie_analyzer.py  test_jwt_analyzer.py  test_rate_limit_prober.py
